--- a/src/assets/styles/sidenav.scss
+++ b/src/assets/styles/sidenav.scss
@@ -23,6 +23,7 @@
     overflow-y: auto;
     transform: translate3d(-100%, 0, 0);
     background-color: transparent;
+    max-width: 100%;
   }
 }
 
